# vibecast

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
VibecastPrompts/: VIBECAST_BUILD_PROMPTS.md  VIBECAST_TEST_PROMPT.md
docs/: VIBECAST_QUICK_REFERENCE.md
src/: app.rs  main.rs
src/api/: mod.rs  somafm.rs  types.rs
src/artwork/: cache.rs  mod.rs
src/input/: handler.rs  mod.rs
src/player/: mod.rs  mpv.rs
src/storage/: config.rs  favorites.rs  mod.rs
src/ui/: artwork.rs  header.rs  help.rs  mod.rs  now_playing.rs  song_history.rs  station_list.rs  status_bar.rs  theme.rs  visualizer.rs
src/visualizer/: mod.rs  spectrum.rs
